src/styles/main.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Poppins", sans-serif;
  color: #333;
  background-color: aliceblue;
  font-weight: 400;
}

.skip-link {
  position: absolute;
  top: -45px;
  left: 0;
  padding: 8px;
  background-color: #bf1722;
  color: white;
  z-index: 100;
}

.skip-link:focus {
  top: 0;
}

.container {
  max-width: 1320px;
  margin: 0 auto;
}

header {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

header .logo {
  font-family: "Pacifico", cursive;
  font-size: 1.7rem;
  padding: 44px;
}

header nav {
  padding: 44px;
}

header nav #hamburger {
  font-size: 1.7rem;
  font-weight: bold;
}

header nav #hamburger:hover {
  border-bottom: 2px solid aliceblue;
}

header nav a {
  text-decoration: none;
  padding: 44px;
  color: #333;
}

header nav a:hover {
  color: #18122b;
  border-bottom: 2px solid #18122b;
}

header nav .nav__list {
  display: none;
}

header nav.mobile-nav {
  position: fixed;
  width: 50%;
  background-color: white;
  top: 0;
  left: 0;
  height: 100vh;
  transform: translate(-370px, 0);
  transition: transform 0.3s ease-in-out;
  padding: 0;
  z-index: 1;
}

nav.mobile-nav.open {
  transform: translate(0, 0);
}

nav.mobile-nav ul {
  list-style: none;
  display: flex;
  flex-direction: column;
}

nav.mobile-nav ul li {
  padding: 44px 0;
  border-top: 1px solid rgba(0, 0, 0, 0.1);
}

nav.mobile-nav ul:last-child {
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
}

nav.mobile-nav ul li a {
  padding: 44px;
  width: 100%;
  color: #333;
  font-size: 1rem;
}

nav.mobile-nav ul li a:hover {
  border-bottom: none;
}

#jumbotron {
  width: 100%;
  background-image: linear-gradient(
      90deg,
      rgba(0, 0, 0, 0.5),
      rgba(0, 0, 0, 0.5)
    ),
    url("../public/images/heros/hero-image_2.jpg");
  background-size: cover;
  background-position: center;
  height: 600px;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 20px;
  flex-direction: column;
  gap: 1rem;
}

#jumbotron h1 {
  text-align: center;
  color: aliceblue;
  font-weight: 700;
  font-size: 1.9rem;
}

#jumbotron p {
  color: aliceblue;
  text-align: center;
  font-size: 1.1rem;
}

#content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 1rem;
  padding: 20px;
  margin-bottom: 20px;
  margin-top: 5px;
}

.content__title {
  font-size: 1.6rem;
}

.content__restaurants {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
  gap: 2rem;
}

.restaurants__card {
  min-width: 100px;
  min-height: 100px;
  display: flex;
  flex-direction: column;
  border-radius: 6px;
  overflow: hidden;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
  transition: .2s;
}

.restaurants__card a {
  text-decoration: none;
  color: inherit;
  border-radius: 6px;
  overflow: hidden;
}

.restaurants__card a:focus-visible {
  border: 2px solid black;
}

.restaurants__card:hover {
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
}

.card__thumbnail {
  width: 100%;
  height: 250px;
  position: relative;
}

.card__thumbnail img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  filter: brightness(.8);
}

.thumbnail__location {
  display: inline-block;
  background-color: #18122b;
  padding: 4px 8px;
  border-radius: 4px;
  font-size: 0.9rem;
  color: aliceblue;
  position: absolute;
  left: 15px;
  top: 15px;
}

.card__detail {
  display: flex;
  flex-direction: column;
  gap: 0.8rem;
  padding: 20px;
}

.detail__extras {
  display: flex;
  justify-content: space-between;
}

.extras__rating {
  font-size: 0.9rem;
}

.extras__rating_checked {
  color: orange;
}

.detail__title {
  font-size: 1.2rem;
}

.detail__title a {
  color: inherit;
  text-decoration: none;
}

.detail__title a:hover {
  text-decoration: underline;
}

.detail__desc {
  font-weight: 1rem;
}

footer {
  background-color: #18122b;
  color: aliceblue;
  width: 100%;
  height: 80px;
  display: flex;
  justify-content: center;
  align-items: center;
}

footer p {
  text-align: center;
  font-size: 0.95rem;
}

footer p a {
  color: inherit;
}

@media screen and (min-width: 744px) {
  .content__restaurants {
    grid-template-columns: repeat(2, 1fr);
  }

  /* hide mobile menu button */
  header nav #hamburger {
    display: none;
  }

  /* hide drawer mobile */
  header nav.mobile-nav {
    display: none;
  }

  /* show menu */
  header nav .nav__list {
    display: flex;
  }

  header nav .nav__list {
    list-style: none;
  }

  header nav .nav__list li a {
    font-size: 1rem;
  }

  #jumbotron {
    padding: 0 40px;
  }

  #content {
    padding: 20px 40px;
  }
}

@media screen and (min-width: 1140px) {
  #jumbotron h1 {
    font-size: 2.1rem;
  }

  .content__restaurants {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media screen and (max-width: 375px) {
  header .logo {
    font-size: 1.5rem;
  }
}

